# OpenASIO-SDK

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  apply_openasio_alsa17h.sh
crates/openasio/: Cargo.toml
crates/openasio-driver-alsa17h/: Cargo.toml
crates/openasio-driver-alsa17h/src/: lib.rs
crates/openasio-driver-cpal/: Cargo.toml
crates/openasio-driver-cpal/src/: lib.rs
crates/openasio-driver-umc202hd/: Cargo.toml
crates/openasio-driver-umc202hd/src/: lib.rs
crates/openasio-sys/: Cargo.toml  build.rs
crates/openasio-sys/src/: lib.rs
crates/openasio/src/: lib.rs
docs/: openasio-spec.md
include/openasio/: openasio.h
patches/: openasio-driver-alsa17h.patch
sdk/include/openasio/: openasio.h
