[package]
name = "openasio-driver-cpal"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OpenASIO driver implemented over CPAL (Linux/ALSA/JACK) with full-duplex"

[lib]
crate-type = ["cdylib"]

[dependencies]
openasio-sys = { path = "../openasio-sys" }
cpal = { version = "0.15", default-features = true, features = ["jack"] }
libc = "0.2"
