[package]
name = "openasio-driver-umc202hd"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OpenASIO driver tuned for the Behringer UMC202HD USB audio interface"
categories = ["audio", "ffi"]
keywords = ["audio", "alsa", "behringer", "umc202hd", "openasio"]

[lib]
crate-type = ["cdylib"]

[dependencies]
openasio-sys = { path = "../openasio-sys" }
alsa = "0.9"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["poll"] }
